; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_vmenus.c_seek_flag_offset.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_vmenus.c_seek_flag_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.seek_flag_offset_t = type { i64*, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*)* @seek_flag_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @seek_flag_offset(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.seek_flag_offset_t*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.seek_flag_offset_t*
  store %struct.seek_flag_offset_t* %7, %struct.seek_flag_offset_t** %5, align 8
  %8 = load %struct.seek_flag_offset_t*, %struct.seek_flag_offset_t** %5, align 8
  %9 = getelementptr inbounds %struct.seek_flag_offset_t, %struct.seek_flag_offset_t* %8, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %37

12:                                               ; preds = %2
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.seek_flag_offset_t*, %struct.seek_flag_offset_t** %5, align 8
  %17 = getelementptr inbounds %struct.seek_flag_offset_t, %struct.seek_flag_offset_t* %16, i32 0, i32 0
  %18 = load i64*, i64** %17, align 8
  %19 = load i64, i64* %18, align 8
  %20 = icmp slt i64 %15, %19
  br i1 %20, label %21, label %36

21:                                               ; preds = %12
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.seek_flag_offset_t*, %struct.seek_flag_offset_t** %5, align 8
  %26 = getelementptr inbounds %struct.seek_flag_offset_t, %struct.seek_flag_offset_t* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = icmp sgt i64 %24, %27
  br i1 %28, label %29, label %36

29:                                               ; preds = %21
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load %struct.seek_flag_offset_t*, %struct.seek_flag_offset_t** %5, align 8
  %34 = getelementptr inbounds %struct.seek_flag_offset_t, %struct.seek_flag_offset_t* %33, i32 0, i32 0
  %35 = load i64*, i64** %34, align 8
  store i64 %32, i64* %35, align 8
  br label %36

36:                                               ; preds = %29, %21, %12
  br label %62

37:                                               ; preds = %2
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = load %struct.seek_flag_offset_t*, %struct.seek_flag_offset_t** %5, align 8
  %42 = getelementptr inbounds %struct.seek_flag_offset_t, %struct.seek_flag_offset_t* %41, i32 0, i32 0
  %43 = load i64*, i64** %42, align 8
  %44 = load i64, i64* %43, align 8
  %45 = icmp sgt i64 %40, %44
  br i1 %45, label %46, label %61

46:                                               ; preds = %37
  %47 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = load %struct.seek_flag_offset_t*, %struct.seek_flag_offset_t** %5, align 8
  %51 = getelementptr inbounds %struct.seek_flag_offset_t, %struct.seek_flag_offset_t* %50, i32 0, i32 1
  %52 = load i64, i64* %51, align 8
  %53 = icmp slt i64 %49, %52
  br i1 %53, label %54, label %61

54:                                               ; preds = %46
  %55 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %56 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %55, i32 0, i32 0
  %57 = load i64, i64* %56, align 8
  %58 = load %struct.seek_flag_offset_t*, %struct.seek_flag_offset_t** %5, align 8
  %59 = getelementptr inbounds %struct.seek_flag_offset_t, %struct.seek_flag_offset_t* %58, i32 0, i32 0
  %60 = load i64*, i64** %59, align 8
  store i64 %57, i64* %60, align 8
  br label %61

61:                                               ; preds = %54, %46, %37
  br label %62

62:                                               ; preds = %61, %36
  ret i32 1
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
